<resources>
    <string name="app_name">EnglishDictionary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dictionary">Dictionary</string>
    <string name="favorite">Favorite</string>
    <string name="game">Game</string>
    <string name="setting">Setting</string>
    <string name="configuration_of_speed_speak">Configuration of speed speak</string>
    <string name="speed">Speed:</string>
    <string name="configuration_of_font_size">Configuration of font size</string>
    <string name="hello_word">Hello word</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="extra_large">Extra large</string>
    <string name="share_application">Share application</string>

</resources>