<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.ui.fragment.setting.SettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_base_font_bold_50"
        android:textColor="@color/lightGreen_800"
        android:text="@string/setting" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/text_base_font_20"
        android:text="@string/configuration_of_speed_speak"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/text_base_font_20"
            android:textColor="@color/grey_600"
            android:text="@string/speed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/text_base_font_20"
            android:textColor="@color/grey_600"
            android:text="x1"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="200dp"
            android:src="@drawable/ic_sound"/>
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:maxWidth="7dp"
        android:maxHeight="7dp"
        android:minWidth="7dp"
        android:minHeight="7dp"
        android:padding="10dp"
        android:progress="50"
        android:progressDrawable="@drawable/custom_seek_bar"
        android:splitTrack="false"
        android:thumb="@drawable/custom_seek_bar_thumb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTestSound"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_base_font_20"
        android:text="@string/configuration_of_font_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0">

            <RadioButton
                android:id="@+id/rbSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_base_font_18"
                android:layout_weight="1"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/rbNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_base_font_18"
                android:layout_weight="1"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/rbLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_base_font_18"
                android:layout_weight="1"
                android:text="@string/large" />

            <RadioButton
                android:id="@+id/rbExtraLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_base_font_18"
                android:layout_weight="1"
                android:text="@string/extra_large" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_base_font_30"
            android:textColor="@color/black"
            android:layout_marginTop="90dp"
            android:layout_marginStart="80dp"
            android:text="@string/hello_word"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_base_font_20"
        android:text="@string/share_application"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-26dp"
        android:layout_marginStart="170dp"
        android:src="@drawable/ic_share_1"/>
</LinearLayout>